# vimwiki_extensions

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  config.toml  pyproject.toml  run.sh
python/: generate_vimwiki_diary_template_work  generate_vimwiki_diary_template_work.py
python/tests/: test_generate_templates.py
python/tests/data/: 1950-01-01.md
vimwiki_extensions/: .coveragerc  generate_vimwiki_diary_template_work.py  print_diary_privat.py  print_diary_work.py  print_jira_entry.py  utils.py  vimwiki_template_jira_story.py
vimwiki_extensions/templates/: diary_privat.jinja  diary_work.jinja  jira_entry.jinja
vimwiki_extensions/tests/: test_diary_work.py  test_generate_templates.py  test_jira.py  test_utils.py
vimwiki_extensions/tests/data/: 1900-01-01.md  1950-01-01.md
