[tool.poetry]
name = "vimwiki_extensions"
version = "1.0.0"
description = "Library to templating of diary entries for vimwiki."
authors = ["Jan Specker"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "^2.10.1"
yapf = "^0.30.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

