[tool.poetry]
name = "utils"
version = "0.1.0"
description = "Utils for my personal stuff"
authors = ["Jan Specker"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

