[tool.poetry]
name = "vimwiki_extensions"
version = "0.1.0"
description = "Utils for my personal stuff"
authors = ["Jan Specker"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "^2.10.1"
pylint = "*"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

